components/waypoint-egress/gateway-egress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: egress-gateway
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                # - httpbin
                # - nginx-echo-headers
                # - authz-custom
                - sample
                - istio-egress
