components/waypoint-egress/serviceentry-graph-microsoft-com.yaml

apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: graph-microsoft-com
spec:
  exportTo:
  - "."
  hosts:
  - graph.microsoft.com
  ports:
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
