components/waypoint-egress/serviceentry-login-microsoftonline-com.yaml

apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: login-microsoftonline-com
spec:
  exportTo:
  - "."
  hosts:
  - login.microsoftonline.com
  - graph.microsoft.com
  ports:
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
