components/waypoint-egress/authorizationpolicy-www.google.com.yaml


apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: www-google-com
spec:
  targetRefs:
  - kind: ServiceEntry
    group: networking.istio.io
    name: www-google-com
  action: ALLOW
  rules:
  # Allow only certain apps access
  - from:
    - source:
        principals: ["cluster.local/ns/httpbin/sa/httpbin"]
  - from:
    - source:
        principals: ["cluster.local/ns/sample/sa/curl"]
